force-app/main/default/objects/NBA_Suppression_Rule__mdt/NBA_Suppression_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines when GTM actions should NOT be created. Suppression rules prevent over-contacting and respect meeting windows.</description>
    <label>GTM Suppression Rule</label>
    <pluralLabel>GTM Suppression Rules</pluralLabel>
</CustomObject>