force-app/main/default/objects/NBA_Suppression_Rule__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>The condition that triggers suppression (e.g., Upcoming Meeting, Recent Valid Touch, Closed Opp)</description>
    <label>Condition</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>