force-app/main/default/objects/NBA_Suppression_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Unique rule identifier (e.g., Meeting_Scheduled_Suppress, Recent_Touch_Suppress)</description>
    <label>Rule Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>