force-app/main/default/objects/NBA_Suppression_Rule__mdt/fields/Suppression_Window_Hours__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Window_Hours__c</fullName>
    <description>Hours before/after the condition during which actions are suppressed</description>
    <label>Suppression Window (Hours)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>